<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.android.funquiz.MainActivity">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_size_portrait"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/large_margin"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/worldquizlogo" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/photo"
        android:layout_centerInParent="true"
        android:hint="@string/name_filed_hint"
        android:inputType="textCapWords"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textSize="@dimen/main_text_size" />

    <Button
        android:id="@+id/beginButton"
        style="@style/Buttons"
        android:layout_below="@id/nameField"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorButton"
        android:onClick="start"
        android:text="@string/begin_Button" />

</RelativeLayout>
